# ztest

./: CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake  ztestConfig.cmake.in
include/: ztest.cppm  ztest.hpp
include/ztest/: macro.h  module.h  ztest.cppm  ztest.hpp
src/: macro.h  main.cpp  main.cppm
ztest/: main.cpp  ztest.cpp  ztest.cppm
